# musetric-toolkit

./: .gitignore  AGENTS.md  overrides.txt  pyproject.toml  readme.md  thirdPartyNotices.md
.github/: pr-title.config.yml  prTitle.config.yml
.github/workflows/: check.yml  codeQuality.yml  pr-title.yml  prTitle.yml  release.yml
musetric_toolkit/chords_audio/: chordmini_checkpoint.py  chordmini_runner.py  main.py  main_cli.py  response_builder.py
musetric_toolkit/chords_audio/chordmini/: NOTICE.md
musetric_toolkit/chords_audio/chordmini/models/: btc_model.py  chord_net.py
musetric_toolkit/chords_audio/chordmini/models/common/: checkpoint_loading.py
musetric_toolkit/common/: envs.py  logger.py  paths.py
musetric_toolkit/key_audio/: main.py  main_cli.py  response_builder.py  skey_checkpoint.py  skey_runner.py
musetric_toolkit/key_audio/skey/: __init__.py  chromanet.py  key_detection.py
musetric_toolkit/rhythm_audio/: beat_this_runner.py  bpm_estimator.py  main.py  main_cli.py  response_builder.py
musetric_toolkit/separate_audio/: bs_roformer_separator.py  index.py  main.py  main_cli.py  mdx_net_separator.py  mel_band_roformer_onnx_separator.py  mel_band_roformer_separator.py  roformer_utils.py
musetric_toolkit/separate_audio/ffmpeg/: write.py
musetric_toolkit/separate_audio/roformer/: attend.py  mel_band_roformer.py
musetric_toolkit/transcribe_audio/: hallucination_filter.py  index.py  language_detector.py  main.py  main_cli.py  response_builder.py  silence_filter.py  spectral_chunker.py  whisperx_runner.py
scripts/: check.py
scripts/onnx/: build_core_onnx.py  build_full_onnx.py  convert_fp16.py  converting.md  export_chunk.py  infer_separator.py  op_audit.py  probe_webgpu_fused_ops.py  repack_onnx.py  split_concat_webgpu.py  validate_full_onnx.py
scripts/onnx/beat_this/: dump_reference_mel.py  export_beat_this.py  publish_beat_this.py  readme.md  stage_beat_this.py  validate_beat_this.py
scripts/onnx/chordmini/: export_chordnet.py  generate_cqt_plan.py  generate_cqt_reference.py  publish_chordnet.py  readme.md  stage_chordnet.py  validate_chordnet.py
scripts/onnx/roformer/: build_core_onnx.py  converting.md  op_audit.py  probe_webgpu_fused_ops.py  split_concat_webgpu.py
scripts/onnx/skey/: export_skey.py  publish_skey.py  readme.md  stage_skey.py  validate_skey.py
scripts/onnx/whisper/: convert.py  publish_whisper.py  quantize.py  readme.md  requirements.txt  stage_whisper.py
scripts/onnx/whisper/extra/: whisper.py
