[project]
name = "musetric-toolkit"
version = "0.0.1"
description = "Musetric Toolkit"
authors = [{ name = "Vladlen Popelenkov", email = "popelenkow@gmail.com" }]
requires-python = "==3.13.11"
dependencies = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "rotary-embedding-torch==0.8.9",
    "einops==0.8.2",
    "numpy==2.4.6",
    "numba==0.65.1",
    "PyYAML==6.0.3",
    "platformdirs==4.10.0",
    "whisperx==3.8.6",
    "hf-xet==1.5.1",
    "beat-this==1.1.0",
    "soundfile==0.14.0",
    "nnAudio==0.3.4",
    "librosa==0.11.0",
]

[project.optional-dependencies]
cpu = ["onnxruntime==1.26.0"]
cuda = ["onnxruntime-gpu==1.26.0"]

[project.scripts]
musetric-separate = "musetric_toolkit.separate_audio.main_cli:main_cli"
musetric-transcribe = "musetric_toolkit.transcribe_audio.main_cli:main_cli"
musetric-rhythm = "musetric_toolkit.rhythm_audio.main_cli:main_cli"
musetric-key = "musetric_toolkit.key_audio.main_cli:main_cli"
musetric-chords = "musetric_toolkit.chords_audio.main_cli:main_cli"

[tool.uv]
override-dependencies = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
]

[dependency-groups]
check = [
    "black==26.5.1",
    "isort==8.0.1",
    "ruff==0.15.17",
]
export = [
    "onnx==1.21.0",
    "onnxconverter-common==1.16.0",
    "onnxscript==0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["musetric_toolkit"]

[tool.black]
exclude = "(.venv|musetric_toolkit/chords_audio/chordmini|musetric_toolkit/key_audio/skey)"

[tool.isort]
profile = "black"
skip = [
    ".venv",
    "musetric_toolkit/chords_audio/chordmini",
    "musetric_toolkit/key_audio/skey",
]

[tool.ruff]
exclude = [
    ".venv",
    "musetric_toolkit/chords_audio/chordmini",
    "musetric_toolkit/key_audio/skey",
]
line-length = 88

[tool.ruff.lint]
select = [
    "B",
    "C90",
    "E",
    "F",
    "I",
    "N",
    "PL",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TCH",
    "TID",
    "UP",
    "W",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
