[project]
name = "musetric-toolkit"
version = "0.0.1"
description = "Musetric Toolkit"
authors = [{ name = "Musetric", email = "musetric@gmail.com" }]
requires-python = "==3.13.11"
dependencies = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "rotary-embedding-torch==0.8.9",
    "einops==0.8.2",
    "numpy==2.4.6",
    "numba==0.65.1",
    "PyYAML==6.0.3",
    "platformdirs==4.10.0",
    "whisperx==3.8.6",
    "hf-xet==1.5.1",
    "beat-this==1.1.0",
    "soundfile==0.14.0",
    "nnAudio==0.3.4",
    "librosa==0.11.0",
    "onnxruntime-gpu==1.26.0",
]

[project.scripts]
musetric-separate = "musetric_toolkit.separate_audio.main_cli:main_cli"
musetric-transcribe = "musetric_toolkit.transcribe_audio.main_cli:main_cli"
musetric-rhythm = "musetric_toolkit.rhythm_audio.main_cli:main_cli"
musetric-key = "musetric_toolkit.key_audio.main_cli:main_cli"
musetric-chords = "musetric_toolkit.chords_audio.main_cli:main_cli"

[tool.uv]
# CUDA-only: resolve the torch stack from the CUDA 12.9 PyTorch index and lock
# only for platforms with CUDA wheels (Linux x86_64, Windows). macOS / non-x86
# have no CUDA builds and are intentionally unsupported. torchcodec is left on
# PyPI: cu129 only ships torchcodec >=0.10, but whisperx pins it to <0.8.0.
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32'",
]
# faster-whisper hard-depends on the CPU `onnxruntime` package. Override it away
# with a never-matching marker so only onnxruntime-gpu is installed; both ship the
# same `onnxruntime` import, so faster-whisper's VAD keeps working on the GPU build.
override-dependencies = ["onnxruntime; sys_platform == 'no-such-platform'"]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchaudio = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }

[dependency-groups]
check = [
    "black==26.5.1",
    "isort==8.0.1",
    "ruff==0.15.17",
]
export = [
    "onnx==1.21.0",
    "onnxconverter-common==1.16.0",
    "onnxscript==0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["musetric_toolkit"]

[tool.black]
exclude = "(.venv|tmp/|musetric_toolkit/chords_audio/chordmini|musetric_toolkit/key_audio/skey|scripts/onnx/whisper/(convert|quantize)\\.py|scripts/onnx/whisper/extra)"

[tool.isort]
profile = "black"
# Skip gitignored paths (scratch dirs, build output) so isort matches the file
# set ruff and black already lint by default.
skip_gitignore = true
skip = [
    ".venv",
    "musetric_toolkit/chords_audio/chordmini",
    "musetric_toolkit/key_audio/skey",
    "scripts/onnx/whisper/extra",
]
# isort's `skip` doesn't match single-file relative paths when running `isort .`,
# so skip the vendored converter files by glob instead
# (see scripts/onnx/whisper/readme.md).
skip_glob = [
    "*/onnx/whisper/convert.py",
    "*/onnx/whisper/quantize.py",
]

[tool.ruff]
exclude = [
    ".venv",
    "musetric_toolkit/chords_audio/chordmini",
    "musetric_toolkit/key_audio/skey",
    # Vendored transformers.js converter (see scripts/onnx/whisper/readme.md).
    "scripts/onnx/whisper/convert.py",
    "scripts/onnx/whisper/quantize.py",
    "scripts/onnx/whisper/extra",
]
line-length = 88

[tool.ruff.lint]
select = [
    "B",
    "C90",
    "E",
    "F",
    "I",
    "N",
    "PL",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TCH",
    "TID",
    "UP",
    "W",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
